Added some hints for students

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   </head>
   <body>
     <div class="header-hero-image">
+      <!-- весь наш сайт это совмещенный хэдер и хиро блок -->
       <header>
+        <!-- обьявляем хэдер -->
         <div class="container">
           <h1>Mysterious Santa</h1>
           <nav>
